Changed the project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,15 @@
 <div style="margin-bottom: 20px;">
   <clr-tabs>
     <clr-tab>
-      <button clrTabLink (click)="title = 'Basics'">Basics</button>
+      <button clrTabLink>RxJs</button>
       <clr-tab-content *clrIfActive="true">
-        <app-lesson-one> </app-lesson-one>
+        <app-rx-js-root> </app-rx-js-root>
       </clr-tab-content>
     </clr-tab>
     <clr-tab>
-      <button clrTabLink>From Events</button>
+      <button clrTabLink>Future Tab</button>
       <clr-tab-content *clrIfActive>
-        <app-hot-cold-obs></app-hot-cold-obs>
-      </clr-tab-content>
-    </clr-tab>
-    <clr-tab>
-      <button clrTabLink>Subjects</button>
-      <clr-tab-content *clrIfActive>
-        <app-subjects></app-subjects>
-      </clr-tab-content>
-    </clr-tab>
-    <clr-tab>
-      <button clrTabLink>Operators</button>
-      <clr-tab-content *clrIfActive>
-        <app-operators></app-operators>
+        No Content
       </clr-tab-content>
     </clr-tab>
   </clr-tabs>
