--- a/src/app/rx-js/hot-cold-obs/hot-cold-obs.component.html
+++ b/src/app/rx-js/hot-cold-obs/hot-cold-obs.component.html
@@ -1,5 +1,4 @@
-<div  style="background-color: lightgrey;padding: 10px;margin:20px">From Events</div>
-<clr-tabs clrLayout="vertical">
+<clr-tabs>
     <clr-tab>
       <button clrTabLink>Mousemove</button>
       <clr-tab-content *clrIfActive="true">
