--- a/src/app/rx-js/lesson-one/lesson-one.component.html
+++ b/src/app/rx-js/lesson-one/lesson-one.component.html
@@ -1,5 +1,4 @@
-<div  style="background-color: lightgrey;padding: 10px;margin:20px">RxJs Basics</div>
-<clr-tabs clrLayout="vertical">
+<clr-tabs>
     <clr-tab>
       <button clrTabLink>Basic Observers</button>
       <clr-tab-content *clrIfActive="true">
@@ -33,7 +32,7 @@
       <clr-tab>
             <button clrTabLink>Value every 500ms</button>
             <clr-tab-content *clrIfActive>
-                <div>
+                <div style="margin:20px">
                     <li *ngFor="let fourth of countToTen">
                         {{ fourth }}
                     </li>
