--- a/src/app/rx-js/operators/operators.component.html
+++ b/src/app/rx-js/operators/operators.component.html
@@ -1,9 +1,8 @@
-<div style="background-color: lightgrey;padding: 10px;margin:20px">Operators</div>
-<clr-tabs clrLayout="vertical">
+<clr-tabs>
     <clr-tab>
       <button clrTabLink>Merge</button>
       <clr-tab-content *clrIfActive="true">
-        <div>
+        <div style="margin:20px">
             <li *ngFor="let record of arr">
                 {{ record }}
             </li>
@@ -13,7 +12,7 @@
     <clr-tab>
       <button clrTabLink>Map</button>
       <clr-tab-content *clrIfActive>
-        <div>
+        <div style="margin:20px">
             <li *ngFor="let record of mapArr">
                 {{ record }}
             </li>
@@ -23,7 +22,7 @@
     <clr-tab>
       <button clrTabLink>Pluck</button>
       <clr-tab-content *clrIfActive>
-        <div>
+        <div style="margin:20px">
             <li *ngFor="let record of pluckArr">
                 {{ record }}
             </li>
@@ -33,7 +32,7 @@
     <clr-tab>
         <button clrTabLink>Skip Until</button>
         <clr-tab-content *clrIfActive>
-            <div style="display: flex;flex-direction: row; justify-content: space-evenly;">
+            <div style="display: flex;flex-direction: row; justify-content: space-evenly; margin:20px">
                 <div>
                     <h6>Will start emmiting value every 1sec after the subject on the rigth fires the message -></h6>
                     <li *ngFor="let record of skipArr">
@@ -42,7 +41,7 @@
                 </div>
                 <div>
                     <h6>Start Subject</h6>
-                    <p>{{ startString }}</p>
+                    <p style="color: red">{{ startString }}</p>
                 </div>
             </div>
         </clr-tab-content>
